--- a/css/desktop.css
+++ b/css/desktop.css
@@ -69,11 +69,24 @@
     display: inline-block;
     position: fixed;
     z-index: 10;
-  }   
+  } 
+  
+  .navbar .navbar-link {
+    display: inline-flex;
+    float: right;
+    padding-right: 5% ;
+  } 
 
-  .navbar a{
+  .navbar-nav li {
+    display: inline-block;
+  }
+
+  .navbar .navbar-nav a{
     text-decoration: none;    
     color: white;
+    display: inline-block;
+    padding: 0px 20px;
+    text-align: center;
   } 
 
   .navbar .navbar-Logo {
@@ -84,27 +97,25 @@
     color: #fda634;
   }
 
-  .navbar .navbar-link {
-    display: inline-flex;
-    float: right;
-    padding-right: 5% ;
-  } 
-
-  .navbar li:hover {
+  .navbar-nav a:hover {
     background-color: #fda634;
   }
 
-  .navbar-nav li {
-    display: inline-block;
-    padding: 0px 20px;
+  .nav-social a {
+    padding: 14px 0px
   }
 
+
+  .nav-social a:hover {
+    color: #fda634;
+  }
 
   #header {
     width: 100%;
     margin: auto;
     background: black;
     overflow: hidden;
+    position: relative;
   }
 
   #header img {
@@ -112,14 +123,13 @@
     margin: auto;
     object-fit: cover;
     opacity: 1;
-    position: relative;
   }
 
   #header .header-text {
     position: absolute;
     z-index: 3;
     color: white;
-    margin-top: 10%;
+    margin-top: 15%;
     left: 0;
     right: 0;
     text-align: center;
@@ -140,6 +150,38 @@
   #header .header-text p:hover {
     background-color: #397492f3;
     cursor: pointer;
+  }
+
+  #header button {
+    background-color: Transparent;
+    border: none;
+    z-index: 11;
+  }
+
+  .prev, 
+  .next {
+    position: absolute;
+    width: auto;
+    top: 50%;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    cursor: pointer;
+  }
+
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+
+  .prev:hover, 
+  .next:hover {
+    background-color: rgba(0,0,0,0.8);
   }
 
   .content {
