--- a/css/mobile.css
+++ b/css/mobile.css
@@ -48,6 +48,19 @@
     padding: 0px 20px;
   }
 
+  .nav-social a {
+    padding: 14px 0px
+  }
+
+  .nav-social a:hover {
+    color: #fda634;
+  }
+
+  #header .header-image {
+    visibility: hidden;
+    display: none;
+  }
+
   #header .header-text {
     font-size: 10px;
     padding-left: 20px;
@@ -57,7 +70,13 @@
     border-bottom: solid 1px gray;
   }
 
-  #header img{
+  #header .mySlides{
+    visibility: hidden;
+    display: none;
+  }
+
+  #header .prev,
+  #header .next {
     visibility: hidden;
     display: none;
   }
