--- a/css/mobile.css
+++ b/css/mobile.css
@@ -180,6 +180,7 @@
 
   .next_destination-content {
     width: 100%;
+    margin: auto;
     margin-top: 20px;
     padding: 50px 0px;
   }
@@ -188,10 +189,20 @@
     padding: 30px 0px;
   }
 
+  .testimonials-content img {
+    width: 100%;
+    margin: auto;
+  }
+
   .next_destination-content .header {
     text-align: center;
     color: rgb(67, 67, 67);
     padding-bottom: 10px;
+  }
+
+  .next_destination-content img {
+    width: 100%;
+    margin: auto;
   }
 
   .footer .image-content p {
@@ -201,6 +212,7 @@
     font-size: 30px;
     text-shadow: 2px 2px 10px black;
   }
+
 
   #book-content {
     padding: 10px;
